classDiagram
    class PosController {
        +index(Request, PosBootstrapService)
        +login(Request, PosBootstrapService) JsonResponse
        +logout(Request) JsonResponse
        +bootstrap(Request, PosBootstrapService) JsonResponse
        +storeItem(Request, PosBootstrapService) JsonResponse
        +updateItem(Request, InventoryItem, PosBootstrapService) JsonResponse
        +destroyItem(Request, InventoryItem, PosBootstrapService) JsonResponse
        +storeGoodsIn(Request, PosBootstrapService) JsonResponse
        +checkout(Request, PosBootstrapService) JsonResponse
        +storeSupplier(Request, PosBootstrapService) JsonResponse
        +updateSupplier(Request, Supplier, PosBootstrapService) JsonResponse
        +destroySupplier(Request, Supplier, PosBootstrapService) JsonResponse
        +storeCategory(Request, PosBootstrapService) JsonResponse
        +storeUnit(Request, PosBootstrapService) JsonResponse
        +reportPdf(Request)
    }

    class PosBootstrapService {
        +build(User) array
        -serializeInventoryItem(InventoryItem) array
        -serializeGoodsReceipt(GoodsReceipt) array
        -serializeSupplier(Supplier) array
        -serializeSale(Sale) array
    }

    class PosDemoSeederService {
        +resetAndSeed() User
        -makeDate(int, int, int) Carbon
    }

    class User {
        +id
        +name
        +username
        +email
        +password
    }

    class Supplier {
        +id
        +name
        +inventoryItems()
        +goodsReceipts()
    }

    class InventoryItem {
        +id
        +sku
        +name
        +category
        +unit
        +supplier_id
        +stock
        +min_stock
        +price
        +description
        +supplier()
        +goodsReceipts()
        +saleItems()
    }

    class InventoryCategory {
        +id
        +name
    }

    class InventoryUnit {
        +id
        +name
    }

    class GoodsReceipt {
        +id
        +inventory_item_id
        +supplier_id
        +quantity
        +unit_cost
        +received_at
        +note
        +inventoryItem()
        +supplier()
    }

    class Sale {
        +id
        +invoice_number
        +user_id
        +subtotal
        +discount
        +total
        +payment_amount
        +change_amount
        +sold_at
        +items()
        +user()
    }

    class SaleItem {
        +id
        +sale_id
        +inventory_item_id
        +sku
        +item_name
        +category
        +unit
        +quantity
        +unit_price
        +line_total
        +sale()
        +inventoryItem()
    }

    PosController --> PosBootstrapService
    PosController --> PosDemoSeederService
    PosController --> InventoryItem
    PosController --> Supplier
    PosController --> InventoryCategory
    PosController --> InventoryUnit
    PosController --> Sale

    PosBootstrapService --> User
    PosBootstrapService --> InventoryItem
    PosBootstrapService --> Supplier
    PosBootstrapService --> GoodsReceipt
    PosBootstrapService --> Sale

    Supplier "1" --> "0..*" InventoryItem
    Supplier "1" --> "0..*" GoodsReceipt
    InventoryItem "1" --> "0..*" GoodsReceipt
    InventoryItem "1" --> "0..*" SaleItem
    Sale "1" --> "1..*" SaleItem
    User "1" --> "0..*" Sale
